agregamos las meta y los alt

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
+      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa,inscripciones"
     />
     <meta
       name="keywords"
-      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
+      content="ciclismo, giro, italia, tour, francia, vuelta, españa, Inscribase, inscripcion, formulario"
     />
     <meta name="author" content="Lean" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -107,9 +107,9 @@
     <footer>
       <div class="container">
         <div class="redes">
-          <img src="../images/facebook.png" />
-          <img src="../images/gorjeo.png" />
-          <img src="../images/instagram.png" />
+          <img src="../images/facebook.png" alt="logo de facebook" />
+          <img src="../images/gorjeo.png" alt="logo de twitter" />
+          <img src="../images/instagram.png" alt="logo de instagram" />
         </div>
       </div>
     </footer>
