--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
-    />
+    <meta name="description" content="ciclismo del siglo XXI, giro de italia" />
     <meta
       name="keywords"
-      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
+      content="ciclismo, giro, italia,camiseta, montaña, sprint, lider "
     />
     <meta name="author" content="Lean" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -118,6 +115,7 @@
                       <img
                         src="../images/magliaciclocamino.jpg"
                         class="d-block w-50"
+                        alt="camiseta de puntos del giro de italia"
                       />
                     </div>
                   </div>
@@ -126,6 +124,7 @@
                       <img
                         src="../images/magliaazzurra.jpg"
                         class="d-block w-50"
+                        alt="camiseta clasificacion sprint del giro de italia"
                       />
                     </div>
                   </div>
@@ -134,6 +133,7 @@
                       <img
                         src="../images/magliablanca.jpg"
                         class="d-block w-50"
+                        alt="camiseta clasificacion del mejor joven giro de italia"
                       />
                     </div>
                   </div>
@@ -171,9 +171,9 @@
     <footer>
       <div class="container">
         <div class="redes">
-          <img src="../images/facebook.png" />
-          <img src="../images/gorjeo.png" />
-          <img src="../images/instagram.png" />
+          <img src="../images/facebook.png" alt="logo de facebookt" />
+          <img src="../images/gorjeo.png" alt="logo de twitter" />
+          <img src="../images/instagram.png" alt="logo de instagram" />
         </div>
       </div>
     </footer>
