--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
+      content="ciclismo del siglo XXI, la vuelta de españa, lider, montaña, sprint, joven"
     />
-    <meta
-      name="keywords"
-      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
-    />
+    <meta name="keywords" content="ciclismo, vuelta, españa" />
     <meta name="author" content="Lean" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -103,18 +100,30 @@
     <section>
       <div class="container">
         <div class="logos">
-          <img class="imagen-index" src="../images/vueltalider.jpg" />
-          <img class="imagen-index" src="../images/vueltaespañavelocista.jpg" />
-          <img class="imagen-index" src="../images/vueltalidermontaña.jpg" />
+          <img
+            class="imagen-index"
+            src="../images/vueltalider.jpg"
+            alt="camiseta de lider de la vuelta de españa"
+          />
+          <img
+            class="imagen-index"
+            src="../images/vueltaespañavelocista.jpg"
+            alt="camiseeta de lider del sprint de la vuelta de españa"
+          />
+          <img
+            class="imagen-index"
+            src="../images/vueltalidermontaña.jpg"
+            alt="camiseta de lider de la montaña de la vuelta de españa "
+          />
         </div>
       </div>
     </section>
     <footer>
       <div class="container">
         <div class="redes">
-          <img src="../images/facebook.png" />
-          <img src="../images/gorjeo.png" />
-          <img src="../images/instagram.png" />
+          <img src="../images/facebook.png" alt="logo de facebook" />
+          <img src="../images/gorjeo.png" alt="logo de twitter" />
+          <img src="../images/instagram.png" alt="logo de instagram" />
         </div>
       </div>
     </footer>
