--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="ciclismo del siglo XXI, giro de italia, tour de francia, la vuelta de españa"
+      content="ciclismo del siglo XXI, tour de francia"
     />
     <meta
       name="keywords"
-      content="ciclismo, giro, italia, tour, francia, vuelta, españa"
+      content="ciclismo, tour, francia, montaña, lider, sprint, joven"
     />
     <meta name="author" content="Lean" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -111,10 +111,21 @@
     <section>
       <div class="container">
         <div class="logos">
-          <img class="imagen-index" src="../images/lidertour.jpg" />
-          <img class="imagen-index" src="../images/lidermontañatour.jpg" />
-
-          <img class="imagen-index" src="../images/lidersprint.jpg" />
+          <img
+            class="imagen-index"
+            src="../images/lidertour.jpg"
+            alt="camiseta del lider del tour de francia"
+          />
+          <img
+            class="imagen-index"
+            src="../images/lidermontañatour.jpg"
+            alt="camiseta del lider de la montaña del tour de francia"
+          />
+          <img
+            class="imagen-index"
+            src="../images/lidersprint.jpg"
+            alt="camiseta del lider del sprint del tour de francia"
+          />
         </div>
       </div>
     </section>
@@ -122,9 +133,9 @@
     <footer>
       <div class="container">
         <div class="redes">
-          <img src="../images/facebook.png" />
-          <img src="../images/gorjeo.png" />
-          <img src="../images/instagram.png" />
+          <img src="../images/facebook.png" alt="logo de facebook" />
+          <img src="../images/gorjeo.png" alt="logo de twitter" />
+          <img src="../images/instagram.png" alt="logo de instagram" />
         </div>
       </div>
     </footer>
