--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
     <footer>
       <div class="container">
         <div class="redes">
-          <img src="./images/facebook.png" />
-          <img src="./images/gorjeo.png" />
-          <img src="./images/instagram.png" />
+          <img src="./images/facebook.png" alt="logo de facebook" />
+          <img src="./images/gorjeo.png" alt="logo de twitter" />
+          <img src="./images/instagram.png" alt="logo de instagram" />
         </div>
       </div>
     </footer>
