--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="icon"
+      sizes="16x16 32x32 48x48"
+      type="image/png"
+      href="/images/logo.png"
+    />
     <title>Ciclismo XXI</title>
   </head>
   <body>
@@ -77,7 +83,7 @@
                     <img
                       class="imagen-index"
                       src="./images/giro de italia.jpg"
-                      alt="Giro de Italia"
+                      alt="logo del Giro de Italia"
                     />
                   </a>
                 </div>
@@ -85,7 +91,11 @@
               <div class="col-xs-12 col-lg-4 logos">
                 <div class="card">
                   <a class="menu2 card-title" href="./pages/lavuelta.html">
-                    <img class="imagen-index" src="./images/lavuelta.jpg" />
+                    <img
+                      class="imagen-index"
+                      src="./images/lavuelta.jpg"
+                      alt="logo de la vuelta de españa"
+                    />
                   </a>
                 </div>
               </div>
@@ -95,6 +105,7 @@
                     <img
                       class="imagen-index"
                       src="./images/tourthefrance.jpg"
+                      alt="logo del tour de francia"
                     />
                   </a>
                 </div>
