--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,6 +20,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="icon"
+      sizes="16x16 32x32 48x48"
+      type="image/png"
+      href="/images/logo.png"
+    />
     <title>Contacto</title>
   </head>
   <body>
