--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="icon"
       sizes="16x16 32x32 48x48"
       type="image/png"
-      href="/images/logo.png"
+      href="./images/logo.png"
     />
     <title>Ciclismo XXI</title>
   </head>
