--- a/pages/ilgiro.html
+++ b/pages/ilgiro.html
@@ -21,7 +21,7 @@
       rel="icon"
       sizes="16x16 32x32 48x48"
       type="image/png"
-      href="/images/logo.png"
+      href="../images/logo.png"
     />
     <title>Elgiro</title>
   </head>
