--- a/pages/lavuelta.html
+++ b/pages/lavuelta.html
@@ -22,7 +22,7 @@
       rel="icon"
       sizes="16x16 32x32 48x48"
       type="image/png"
-      href="/images/logo.png"
+      href="../images/logo.png"
     />
     <title>La Vuelta</title>
   </head>
