--- a/pages/tourthefrance.html
+++ b/pages/tourthefrance.html
@@ -24,7 +24,7 @@
       rel="icon"
       sizes="16x16 32x32 48x48"
       type="image/png"
-      href="/images/logo.png"
+      href="../images/logo.png"
     />
     <title>El Tour de France</title>
   </head>
